[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/Enemys/Boss/cabine.png" type="Texture" id=1]
[ext_resource path="res://sounds/placehold_sounds/Boss_Move.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/placehold_sounds/Boss Hurt.wav" type="AudioStream" id=3]
[ext_resource path="res://World/Enemys/Boss/BOSS_Base.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 79.3053
height = 56.1513

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.831373, 0.196078, 0.196078, 1 ), Color( 1, 1, 1, 1 ), Color( 0.831373, 0.196078, 0.196078, 1 ), Color( 1, 1, 1, 1 ), Color( 0.831373, 0.196078, 0.196078, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../hurt:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 862, 486 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 862, 236 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 862, -14 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 862, 486 ), Vector2( 862, 236 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("move:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 862, 236 ), Vector2( 862, 486 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("move:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 862, 236 ), Vector2( 862, -14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("move:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 862, -14 ), Vector2( 862, 236 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("move:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="BOSS" type="KinematicBody2D"]
position = Vector2( 862, 486 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HurtBox" type="Area2D" parent="Base"]
collision_layer = 128
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="Base/HurtBox"]
shape = SubResource( 1 )

[node name="Sprite_anim" type="AnimationPlayer" parent="Base"]
anims/hurt = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/idle_1 = SubResource( 4 )
anims/idle_2 = SubResource( 5 )
anims/idle_3 = SubResource( 6 )
anims/move_1_2 = SubResource( 7 )
anims/move_2_1 = SubResource( 8 )
anims/move_2_3 = SubResource( 9 )
anims/move_3_2 = SubResource( 10 )

[node name="move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "fx"

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "fx"

[node name="timer_1" type="Timer" parent="."]

[node name="timer_2" type="Timer" parent="."]

[node name="timer_3" type="Timer" parent="."]

[node name="timer_4" type="Timer" parent="."]
[connection signal="area_entered" from="Base/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="timer_1" to="." method="_on_timer_1_timeout"]
[connection signal="timeout" from="timer_2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="timer_3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="timer_4" to="." method="_on_timer_4_timeout"]
